Fixed weird spacing on Canary

--- a/base.css
+++ b/base.css
@@ -8,6 +8,7 @@
   top: var(--server-container) !important;
   position: absolute !important;
   left: 0 !important;
+  right: 0;
 }
 #app-mount .sidebar-2K8pFh {
   border-radius: 0;
