--- a/src/HorizontalServerList.theme.scss
+++ b/src/HorizontalServerList.theme.scss
@@ -24,6 +24,7 @@
     top: var(--server-container) !important;
     position: absolute !important;
     left: 0 !important;
+    right: 0;
   }
 
   .sidebar-2K8pFh {
